// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo - Leading Story should render correctly 1`] = `
.emotion-8 {
  position: relative;
}

.emotion-0 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-0:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited {
  color: #6E6E73;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

.emotion-12 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-12 {
      grid-column-gap: 1rem;
    }
}
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width:63rem) {
  .emotion-6 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    padding: 0;
    width: 100%;
    grid-template-columns: repeat(6,1fr);
    grid-column-end: span 6;
  }

@media (min-width:37.5rem) {
    .emotion-6 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) {
    .emotion-6 {
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

@media (max-width:62.9375rem) {
  .emotion-6 >time {
    padding-bottom: 0.5rem;
  }
}

.emotion-2 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-10 {
    width: initial;
    padding: 0;
    grid-template-columns: repeat(6,1fr);
    grid-column-end: span 6;
  }

@media (min-width:37.5rem) {
    .emotion-10 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) {
    .emotion-10 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-2 emotion-3"
      >
        <a
          class="emotion-0 emotion-1"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-4 emotion-5"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
    <div
      class="emotion-10 emotion-11"
      dir="ltr"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Leading Story should render with Media Indicator correctly 1`] = `
.emotion-12 {
  position: relative;
}

.emotion-0 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-0:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited {
  color: #6E6E73;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

.emotion-8 {
  padding: 0 0.25rem;
}

.emotion-10 {
  position: absolute;
  bottom: 0;
}

.emotion-10 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.emotion-16 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-16 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-16 {
      grid-column-gap: 1rem;
    }
}
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width:63rem) {
  .emotion-6 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    padding: 0;
    width: 100%;
    grid-template-columns: repeat(6,1fr);
    grid-column-end: span 6;
  }

@media (min-width:37.5rem) {
    .emotion-6 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) {
    .emotion-6 {
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

@media (max-width:62.9375rem) {
  .emotion-6 >time {
    padding-bottom: 0.5rem;
  }
}

.emotion-2 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-14 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    width: initial;
    padding: 0;
    grid-template-columns: repeat(6,1fr);
    grid-column-end: span 6;
  }

@media (min-width:37.5rem) {
    .emotion-14 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) {
    .emotion-14 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

<div>
  <div
    class="emotion-16 emotion-17"
  >
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-2 emotion-3"
      >
        <a
          class="emotion-0 emotion-1"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-4 emotion-5"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-10 emotion-11"
        >
          <div
            aria-hidden="true"
            class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
            dir="ltr"
          >
            <div
              class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
            >
              <svg
                aria-hidden="true"
                class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
              <time
                class="emotion-8 emotion-9"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-4 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-4:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #6E6E73;
}

.emotion-12 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-12 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-12 {
      grid-template-columns: repeat(12,1fr);
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-column: 1 / span 3;
    }
}
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    width: 50%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) {
    .emotion-10 {
      grid-column: 4 / span 3;
    }
}

@media (min-width:80rem) {
    .emotion-10 {
      grid-column: 7 / span 6;
    }
}
}

.emotion-6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
      dir="ltr"
    >
      <h3
        class="emotion-6 emotion-7"
      >
        <a
          class="emotion-4 emotion-5"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with Media Indicator correctly 1`] = `
.emotion-4 {
  position: relative;
}

.emotion-8 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-8:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #6E6E73;
}

.emotion-0 {
  padding: 0 0.25rem;
}

.emotion-16 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-16 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-16 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-16 {
      grid-template-columns: repeat(12,1fr);
    }
}
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width:63rem) {
  .emotion-6 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) and (max-width:79.9375rem) {
    .emotion-6 {
      grid-column: 1 / span 3;
    }
}
}

.emotion-14 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    width: 50%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) {
    .emotion-14 {
      grid-column: 4 / span 3;
    }
}

@media (min-width:80rem) {
    .emotion-14 {
      grid-column: 7 / span 6;
    }
}
}

.emotion-10 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-2 {
  position: absolute;
  bottom: 0;
}

.emotion-2 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

<div>
  <div
    class="emotion-16 emotion-17"
  >
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-2 emotion-3"
        >
          <div
            aria-hidden="true"
            class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
            dir="ltr"
          >
            <div
              class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
            >
              <svg
                aria-hidden="true"
                class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
              <time
                class="emotion-0 emotion-1"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <h3
        class="emotion-10 emotion-11"
      >
        <a
          class="emotion-8 emotion-9"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with multiple Index Alsos correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-4 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-4:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #6E6E73;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-32 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-32 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-32 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-32 {
      grid-template-columns: repeat(12,1fr);
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-column: 1 / span 3;
    }
}
}

.emotion-30 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width:37.5rem) {
  .emotion-30 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-30 {
    width: 50%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-30 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) {
    .emotion-30 {
      grid-column: 4 / span 3;
    }
}

@media (min-width:80rem) {
    .emotion-30 {
      grid-column: 7 / span 6;
    }
}
}

.emotion-6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

.emotion-28 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-26 {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.emotion-18 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-16 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-16:hover,
.emotion-16:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-16:visited {
  color: #6E6E73;
}

.emotion-16 svg {
  margin: 0;
}

.emotion-14 {
  display: inline;
  vertical-align: middle;
}

<div>
  <div
    class="emotion-32 emotion-33"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-30 emotion-31"
      dir="ltr"
    >
      <h3
        class="emotion-6 emotion-7"
      >
        <a
          class="emotion-4 emotion-5"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
      <div
        class="emotion-28 emotion-29"
        data-e2e="index-alsos"
      >
        <h4
          class="emotion-10 emotion-11"
        >
          Related content
        </h4>
        <ul
          class="emotion-26 emotion-27"
          role="list"
        >
          <li
            class="emotion-18 emotion-19"
            role="listitem"
          >
            <a
              class="emotion-16 emotion-17"
              href="/hausa/labarai-48916590"
            >
              <div
                aria-hidden="true"
                class="StyledMediaIndicator-sc-1p6h86b-0 fIPcWg"
                dir="ltr"
              >
                <div
                  class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
                >
                  <svg
                    aria-hidden="true"
                    class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                    focusable="false"
                    height="12px"
                    viewBox="0 0 32 32"
                    width="12px"
                  >
                    <polygon
                      points="3,32 29,16 3,0"
                    />
                  </svg>
                </div>
              </div>
              <span
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  video, 
                </span>
                <span
                  class="emotion-14 emotion-15"
                >
                  APC ba ta isa ta kore ni ba – Buba Galadima
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-18 emotion-19"
            role="listitem"
          >
            <a
              class="emotion-16 emotion-17"
              href="/hausa/labarai-42837051"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with one Index Also correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-4 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-4:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #6E6E73;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-24 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-24 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-24 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-24 {
      grid-template-columns: repeat(12,1fr);
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-column: 1 / span 3;
    }
}
}

.emotion-22 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width:37.5rem) {
  .emotion-22 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-22 {
    width: 50%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-22 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }

@media (min-width:37.5rem) {
    .emotion-22 {
      grid-column: 4 / span 3;
    }
}

@media (min-width:80rem) {
    .emotion-22 {
      grid-column: 7 / span 6;
    }
}
}

.emotion-6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

.emotion-20 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-18 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-16 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-16:hover,
.emotion-16:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-16:visited {
  color: #6E6E73;
}

.emotion-16 svg {
  margin: 0;
}

.emotion-14 {
  display: inline;
  vertical-align: middle;
}

<div>
  <div
    class="emotion-24 emotion-25"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-22 emotion-23"
      dir="ltr"
    >
      <h3
        class="emotion-6 emotion-7"
      >
        <a
          class="emotion-4 emotion-5"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
      <div
        class="emotion-20 emotion-21"
        data-e2e="index-alsos"
      >
        <h4
          class="emotion-10 emotion-11"
        >
          Related content
        </h4>
        <div
          class="emotion-18 emotion-19"
        >
          <a
            class="emotion-16 emotion-17"
            href="/hausa/labarai-48916590"
          >
            <div
              aria-hidden="true"
              class="StyledMediaIndicator-sc-1p6h86b-0 fIPcWg"
              dir="ltr"
            >
              <div
                class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
              >
                <svg
                  aria-hidden="true"
                  class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 32 32"
                  width="12px"
                >
                  <polygon
                    points="3,32 29,16 3,0"
                  />
                </svg>
              </div>
            </div>
            <span
              role="text"
            >
              <span
                class="emotion-10 emotion-11"
              >
                video, 
              </span>
              <span
                class="emotion-14 emotion-15"
              >
                APC ba ta isa ta kore ni ba – Buba Galadima
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render Live promo correctly 1`] = `
.emotion-14 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-14 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-14 {
      display: block;
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-0 {
  position: relative;
}

.emotion-12 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-12 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-12 {
      padding-top: 0.5rem;
    }
}
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-10 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    display: none;
    visibility: hidden;
  }
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-6 emotion-7"
          href="https://www.bbc.co.uk/news"
        >
          <span
            role="text"
          >
            <span
              aria-hidden="true"
              class="StyledSpan-sc-5gbj69-0 gGPbYG"
              dir="ltr"
            >
              LIVE 
            </span>
            <span
              class="emotion-4 emotion-5"
              lang="en-GB"
            >
              Live, 
            </span>
            The live promo headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-10 emotion-11"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render a RTL Live promo correctly 1`] = `
.emotion-14 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-14 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-14 {
      display: block;
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-0 {
  position: relative;
}

.emotion-12 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-12 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-12 {
      padding-top: 0.5rem;
    }
}
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-10 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    display: none;
    visibility: hidden;
  }
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-6 emotion-7"
          href="https://www.bbc.co.uk/news"
        >
          <span
            role="text"
          >
            <span
              aria-hidden="true"
              class="StyledSpan-sc-5gbj69-0 dChNdR"
              dir="rtl"
            >
              LIVE 
            </span>
            <span
              class="emotion-4 emotion-5"
              lang="en-GB"
            >
              Live, 
            </span>
            The live promo headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-10 emotion-11"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render correctly 1`] = `
.emotion-12 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-12 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-12 {
      display: block;
    }
}
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-0 {
  position: relative;
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-10 {
      padding-top: 0.5rem;
    }
}
}

.emotion-6 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-4 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-4:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #6E6E73;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
      dir="ltr"
    >
      <h3
        class="emotion-6 emotion-7"
      >
        <a
          class="emotion-4 emotion-5"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render a RTL promo with media indicator correctly 1`] = `
.emotion-16 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-16 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-16 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-16 {
      display: block;
    }
}
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-14 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-14 {
      padding-top: 0.5rem;
    }
}
}

.emotion-10 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-8:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:25rem) {
  .emotion-2 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-2 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-2 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-0 {
  padding: 0 0.25rem;
}

<div>
  <div
    class="emotion-16 emotion-17"
  >
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-2 emotion-3"
        >
          <div
            aria-hidden="true"
            class="StyledMediaIndicator-sc-1p6h86b-0 chbyfp"
            dir="rtl"
          >
            <div
              class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
            >
              <svg
                aria-hidden="true"
                class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
              <time
                class="emotion-0 emotion-1"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <h3
        class="emotion-10 emotion-11"
      >
        <a
          class="emotion-8 emotion-9"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render correctly 1`] = `
.emotion-16 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-16 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-16 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-16 {
      display: block;
    }
}
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-14 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-14 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-14 {
      padding-top: 0.5rem;
    }
}
}

.emotion-10 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-8:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:25rem) {
  .emotion-2 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-2 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-2 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-0 {
  padding: 0 0.25rem;
}

<div>
  <div
    class="emotion-16 emotion-17"
  >
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-2 emotion-3"
        >
          <div
            aria-hidden="true"
            class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
            dir="ltr"
          >
            <div
              class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
            >
              <svg
                aria-hidden="true"
                class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
              <time
                class="emotion-0 emotion-1"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <h3
        class="emotion-10 emotion-11"
      >
        <a
          class="emotion-8 emotion-9"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;
